# MCP-LangGraph-Project-Template

./: Dockerfile  Makefile  README.md  config.json  docker-compose.yml  env.example  main.py  pyproject.toml  requirements.txt
docs/: README.md  cache.md  config.md  models.md  streaming.md
examples/: basic_usage.py  deepseek_example.py  langgraph_example.py  mcp_agent_deepseek.py  simple_deepseek_test.py  simple_example.py
mcp_framework/: __init__.py  cli.py
mcp_framework/config/: __init__.py  model_config.py  settings.py  vector_config.py
mcp_framework/core/: __init__.py  framework.py  mcp_server.py
mcp_framework/langchain/: __init__.py  graph_builder.py
mcp_framework/tools/: __init__.py  base.py
src/: __init__.py
src/agents/: __init__.py  agent.py  base_agent.py  mcp_agent.py
src/config/: __init__.py  config_manager.py  config_watcher.py
src/config/sources/: __init__.py  dict_source.py  env_source.py  file_source.py
src/controllers/: __init__.py  base_controller.py  controller.py  workflow_controller.py
src/memory/: __init__.py  base_memory.py  combined_memory.py  message_memory.py  vector_memory.py
src/models/: __init__.py  base_model.py  deepseek_model.py  model.py  model_factory.py  openai_model.py  streaming.py
src/planners/: __init__.py  base_planner.py  llm_planner.py  planner.py
src/tools/: __init__.py  base_tool.py  tool.py  tool_registry.py
src/utils/: __init__.py  cache.py  config.py  logger.py  utils.py
tests/: test_framework.py
